# best_clipper

./: .gitignore  CMakeLists.txt  README.md  test.cpp
.github/workflows/: clang-format.yml  cmake-multi-platform.yml
benchmarks/: CMakeLists.txt  bench_comparison_circle.cpp  bench_comparison_rect.cpp  bench_ops.cpp  bench_ops_comparison.cpp  benchmark1.cpp
debug/: CMakeLists.txt  debug_column9.cpp  debug_crash1.cpp  debug_hole.cpp  debug_profile.cpp  debug_test.cpp  debug_trace.cpp  debug_union.cpp  debug_validate.cpp  debug_windings.cpp
docs/: design.md
src/: CMakeLists.txt  best_clipper.cpp  chain_builder.cpp  connect_half_chains.cpp  core.cpp  core_detail.hpp  exterior_winding.cpp  filter_half_chains.cpp  graph_helper.cpp  half_chain_graph.cpp  output_builder.cpp
src/include/: basic.hpp  basic_chain.hpp  best_clipper.hpp  chain_builder.hpp  connect_half_chains.hpp  core.hpp  exterior_winding.hpp  filter_half_chains.hpp  geometry_types.hpp  graph_helper.hpp  graph_types.hpp  half_chain_graph.hpp  output_builder.hpp  snap_rounding_helper.hpp  uint32_adaptor.hpp  uniform_grid.hpp
tests/: CMakeLists.txt  test1.cpp  test_connected_components.cpp  test_difference.cpp  test_intersection.cpp  test_known_wkt.cpp  test_manhattan.cpp  test_point_on_segment.cpp  test_snap_rounding.cpp  test_uniform_grid.cpp  test_union.cpp  test_union_rect.cpp  test_xor.cpp
